# mtproxy-ws

./: .clang-format  .editorconfig  README.en.md  README.md  meson.build  meson_options.txt  mtproxy-ws.vapi
.gear/: mtproxy-ws.spec  rules
data/: mtproxy-ws.conf.example  mtproxy-ws.service.in
src/: bridge.c  bridge.h  cli.c  client_io.c  client_io.h  compat.h  crypto.c  crypto.h  fake_tls.c  fake_tls.h  mtproto.c  mtproto.h  net.c  net.h  pool.c  pool.h  proxy-internal.h  proxy.c  proxy.h  splitter.c  splitter.h  websocket.c  websocket.h
